--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
     "build": "webpack --config webpack.prod.js"
   },
   "devDependencies": {
+    "@eslint/js": "^9.27.0",
     "css-loader": "^7.1.2",
+    "eslint": "^9.27.0",
+    "globals": "^16.1.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
     "style-loader": "^4.0.0",
