--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@eslint/js": "^9.27.0",
     "css-loader": "^7.1.2",
     "eslint": "^9.27.0",
+    "eslint-config-prettier": "^10.1.5",
     "globals": "^16.1.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
